--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,32 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-devops-application-deployment
+  name: my-application-deployment
 spec:
   selector:
     matchLabels:
       app: my-application
+  template:
     metadata:
       labels:
         app: my-application
     spec:
       containers:
-      - name: my-application
-        image: kubobilir/my-application
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
-        ports:
-        - containerPort: <Port>
+        - name: my-application
+          //image: kubobilir/my-application:latest
+          image: kubobilir/my-application
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-devops-application-service
+  name: my-application-service
 spec:
   selector:
     app: my-application
   ports:
-  - port: 8080
-    targetPort: 8080
+    - port: 8080
+      targetPort: 8080
+  type: NodePort
