--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
         }
 stage('Unit Test') {
             steps {
-                 bat 'Unit Test'
+                 bat 'echo Unit Test'
             }
         }
 
