--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
         }
 stage('Unit Test') {
             steps {
+                  bat 'mvn test'
                  bat 'echo Unit Test'
             }
         }
